--- a/index.html
+++ b/index.html
@@ -67,13 +67,8 @@
         <title>Visualizador de Mapa</title>
     </head>
     <body>
-        <div id="map">
-            <div id="popup" class="ol-popup">
-                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
-                <div id="popup-content"></div>
-            </div>
-        </div>
-
+        <div id="map"></div>
+        
         <!-- Barra de búsqueda -->
         <div id="search-container">
             <input type="text" id="search-input" placeholder="Ingrese clave..." />
@@ -88,18 +83,44 @@
         <script src="./resources/ol.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
         <script src="layers/MALLA_TIJUANA_CARTAS1K_1.js"></script>
-        <script src="layers/PROCESADAS_2.js"></script>
-        <script src="layers/VOLADAS_3.js"></script>
-        <script src="layers/ENTREGADAS_4.js"></script>
         <script src="styles/MALLA_TIJUANA_CARTAS1K_1_style.js"></script>
-        <script src="styles/PROCESADAS_2_style.js"></script>
-        <script src="styles/VOLADAS_3_style.js"></script>
-        <script src="styles/ENTREGADAS_4_style.js"></script>
-        <script src="./layers/layers.js" type="text/javascript"></script> 
+        <script src="./layers/layers.js"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
 
         <script>
+        // Mostrar coordenadas
+        map.on('pointermove', function (evt) {
+            let coord = ol.proj.toLonLat(evt.coordinate);
+            document.getElementById('coordinates').textContent = `Coordenadas: ${coord[0].toFixed(6)}, ${coord[1].toFixed(6)}`;
+        });
+
+        // Resaltar elementos al pasar el cursor
+        let highlightStyle = new ol.style.Style({
+            stroke: new ol.style.Stroke({ color: 'red', width: 3 }),
+            fill: new ol.style.Fill({ color: 'rgba(255, 0, 0, 0.3)' })
+        });
+
+        let featureHighlighted = null;
+
+        map.on('pointermove', function(evt) {
+            let feature = map.forEachFeatureAtPixel(evt.pixel, function(feature) {
+                return feature;
+            });
+
+            if (featureHighlighted && featureHighlighted !== feature) {
+                featureHighlighted.setStyle(null);
+            }
+
+            if (feature) {
+                feature.setStyle(highlightStyle);
+                featureHighlighted = feature;
+            } else {
+                featureHighlighted = null;
+            }
+        });
+
+        // Función para buscar por clave
         function buscarElemento() {
             let claveBuscada = document.getElementById('search-input').value.trim();
             if (!claveBuscada) {
