--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             background-color: rgba(255,255,255,.4) !important;
             padding: 2px !important;
         } 
-        /* Añadido para mostrar las coordenadas */
         #coordinates {
             position: absolute;
             bottom: 10px;
@@ -43,7 +42,6 @@
             font-family: Arial, sans-serif;
             font-size: 14px;
         }
-        /* Estilos para la barra de búsqueda */
         #search-container {
             position: absolute;
             top: 10px;
@@ -55,27 +53,21 @@
             box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
         }
         </style>
-
-        <style>
-        html, body, #map {
-            width: 100%;
-            height: 100%;
-            padding: 0;
-            margin: 0;
-        }
-        </style>
         <title>Visualizador de Mapa</title>
     </head>
     <body>
-        <div id="map"></div>
-        
-        <!-- Barra de búsqueda -->
+        <div id="map">
+            <div id="popup" class="ol-popup">
+                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+                <div id="popup-content"></div>
+            </div>
+        </div>
+
         <div id="search-container">
             <input type="text" id="search-input" placeholder="Ingrese clave..." />
             <button onclick="buscarElemento()">Buscar</button>
         </div>
 
-        <!-- Div para mostrar las coordenadas -->
         <div id="coordinates">Coordenadas: -</div>
 
         <script src="resources/qgis2web_expressions.js"></script>
@@ -83,44 +75,18 @@
         <script src="./resources/ol.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
         <script src="layers/MALLA_TIJUANA_CARTAS1K_1.js"></script>
+        <script src="layers/PROCESADAS_2.js"></script>
+        <script src="layers/VOLADAS_3.js"></script>
+        <script src="layers/ENTREGADAS_4.js"></script>
         <script src="styles/MALLA_TIJUANA_CARTAS1K_1_style.js"></script>
+        <script src="styles/PROCESADAS_2_style.js"></script>
+        <script src="styles/VOLADAS_3_style.js"></script>
+        <script src="styles/ENTREGADAS_4_style.js"></script>
         <script src="./layers/layers.js"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
 
         <script>
-        // Mostrar coordenadas
-        map.on('pointermove', function (evt) {
-            let coord = ol.proj.toLonLat(evt.coordinate);
-            document.getElementById('coordinates').textContent = `Coordenadas: ${coord[0].toFixed(6)}, ${coord[1].toFixed(6)}`;
-        });
-
-        // Resaltar elementos al pasar el cursor
-        let highlightStyle = new ol.style.Style({
-            stroke: new ol.style.Stroke({ color: 'red', width: 3 }),
-            fill: new ol.style.Fill({ color: 'rgba(255, 0, 0, 0.3)' })
-        });
-
-        let featureHighlighted = null;
-
-        map.on('pointermove', function(evt) {
-            let feature = map.forEachFeatureAtPixel(evt.pixel, function(feature) {
-                return feature;
-            });
-
-            if (featureHighlighted && featureHighlighted !== feature) {
-                featureHighlighted.setStyle(null);
-            }
-
-            if (feature) {
-                feature.setStyle(highlightStyle);
-                featureHighlighted = feature;
-            } else {
-                featureHighlighted = null;
-            }
-        });
-
-        // Función para buscar por clave
         function buscarElemento() {
             let claveBuscada = document.getElementById('search-input').value.trim();
             if (!claveBuscada) {
