--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <style>
         html, body {
             background-color: #ffffff;
+            margin: 0;
+            padding: 0;
+            height: 100%;
         }
         .ol-control > * {
             background-color: #f8f8f8!important;
@@ -42,6 +45,7 @@
             border-radius: 5px;
             font-family: Arial, sans-serif;
             font-size: 14px;
+            z-index: 1000;
         }
         /* Estilos para la barra de búsqueda */
         #search-container {
@@ -50,9 +54,18 @@
             left: 10px;
             z-index: 1000;
             background: white;
-            padding: 5px;
+            padding: 10px;
             border-radius: 5px;
             box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+            width: 200px;
+        }
+        #search-input {
+            width: 150px;
+            padding: 5px;
+        }
+        button {
+            padding: 5px 10px;
+            margin-left: 10px;
         }
         </style>
 
@@ -185,4 +198,3 @@
         </script>
     </body>
 </html>
-
