--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         // Función para cargar el archivo Excel desde GitHub
         function cargarExcelDesdeGitHub() {
             // URL del archivo Excel en GitHub (reemplaza con la URL de tu archivo)
-            const url = 'https://github.com/INYGEO/reportes/blob/main/PRUEBA.xlsx';
+            const url = 'https://raw.githubusercontent.com/INYGEO/reportes/main/PRUEBA.xlsx';
 
             fetch(url)
                 .then(response => response.blob())  // Obtener el archivo como un blob
