--- a/index.html
+++ b/index.html
@@ -19,27 +19,13 @@
       margin: 0;
       padding: 0;
       height: 100%;
+      display: flex;
+      flex-direction: row;
     }
-    .ol-control > * {
-      background-color: #f8f8f8!important;
-      color: #444444!important;
-      border-radius: 0px;
-    }
-    .ol-attribution a,
-    .gcd-gl-input::placeholder,
-    .search-layer-input-search::placeholder {
-      color: #444444!important;
-    }
-    .search-layer-input-search {
-      background-color: #f8f8f8!important;
-    }
-    .ol-control > *:focus,
-    .ol-control >*:hover {
-      background-color: rgba(248, 248, 248, 0.7)!important;
-    }
-    .ol-control {
-      background-color: rgba(255,255,255,.4)!important;
-      padding: 2px!important;
+    #map {
+      height: 100%;
+      width: 80%;  /* El mapa ocupa el 80% de la pantalla */
+      position: relative;
     }
     #coordinates {
       position: absolute;
@@ -71,8 +57,19 @@
       padding: 5px 10px;
       margin-left: 10px;
     }
+    /* Panel lateral fijo para la tabla */
     #tabla-container {
-      margin-top: 20px;
+      width: 20%; /* El panel lateral ocupa el 20% de la pantalla */
+      height: 100%;
+      position: fixed;
+      left: 0;
+      top: 0;
+      background-color: #ffffff;
+      overflow-y: auto;
+      padding: 10px;
+      border-right: 2px solid #ccc;
+      box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.1);
+      z-index: 1000;
     }
     table {
       width: 100%;
@@ -85,85 +82,9 @@
       padding: 8px;
       text-align: left;
     }
-    /* Estilos para el Modal */
-    #modal {
-      display: none; /* Oculto por defecto */
-      position: fixed;
-      z-index: 2000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
-    }
-    #modal-content {
-      position: absolute;
-      top: 50px;   /* Posición inicial, se podrá mover */
-      left: 50px;  /* Posición inicial, se podrá mover */
-      background-color: #fefefe;
-      padding: 0;
-      border: 1px solid #888;
-      width: 80%;
-      max-height: 80%;
-      overflow: auto;
-      border-radius: 5px;
-      resize: both;       /* Redimensionable */
-      overflow: auto;     /* Necesario para redimensionar */
-      min-width: 200px;   /* Ancho mínimo */
-      min-height: 200px;  /* Alto mínimo */
-    }
-    /* Encabezado del modal para arrastrar */
-    #modal-header {
-      cursor: move;
-      background-color: #2196F3;
-      color: white;
-      padding: 10px;
-      user-select: none;
-    }
-    #modal-title {
-      font-size: 18px;
-      display: inline-block;
-    }
-    #modal-close {
-      color: #fff;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    #modal-close:hover,
-    #modal-close:focus {
-      color: #bbb;
-      text-decoration: none;
-    }
-    /* Botón de minimizar */
-    #modal-minimize {
-      color: #fff;
-      float: right;
-      font-size: 20px;
-      font-weight: bold;
-      cursor: pointer;
-      margin-right: 10px;
-    }
-    #modal-minimize:hover,
-    #modal-minimize:focus {
-      color: #bbb;
-      text-decoration: none;
-    }
-    .minimized {
-      height: 30px;
-      width: 100px;
-      overflow: hidden;
-      position: absolute;
-      top: 10px;
-      left: 50px;
-      border: 1px solid #888;
-      background-color: #fefefe;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
+    /* Estilos para el panel de tabla */
+    #tabla-container h3 {
+      margin-top: 0;
     }
   </style>
 </head>
@@ -182,26 +103,21 @@
 
   <div id="coordinates">Coordenadas: -</div>
 
-  <!-- Botón para cargar la tabla, posicionado en la zona izquierda -->
-  <button id="load-table-btn" 
-          onclick="cargarExcelDesdeGitHub()" 
-          style="position: absolute; top: 100px; left: 50px; z-index: 1000; background-color: #f8f8f8; padding: 10px 15px; border-radius: 5px; box-shadow: 0px 0px 5px rgba(0,0,0,0.3);">
-    Cargar Tabla
-  </button>
-
-  <!-- Modal para mostrar la tabla -->
-  <div id="modal">
-    <div id="modal-content">
-      <div id="modal-header">
-        <span id="modal-title">Tabla de Excel</span>
-        <span id="modal-close">&times;</span>
-        <span id="modal-minimize">_</span>
-      </div>
-      <div id="modal-body">
-        <!-- Aquí se insertará la tabla -->
-      </div>
+  <!-- Panel lateral para la tabla -->
+  <div id="tabla-container">
+    <h3>Tabla de Excel</h3>
+    <!-- Aquí se insertará la tabla -->
+    <div id="modal-body">
+      <!-- La tabla se cargará aquí -->
     </div>
   </div>
+
+  <!-- Botón para cargar la tabla -->
+  <button id="load-table-btn" 
+          onclick="cargarExcelDesdeGitHub()" 
+          style="position: absolute; top: 10px; right: 10px; z-index: 1000; background-color: #f8f8f8; padding: 10px 15px; border-radius: 5px; box-shadow: 0px 0px 5px rgba(0,0,0,0.3);">
+    Cargar Tabla
+  </button>
 
   <script src="resources/qgis2web_expressions.js"></script>
   <script src="./resources/functions.js"></script>
@@ -291,7 +207,7 @@
       }
     }
 
-    // Función para cargar el archivo Excel desde GitHub y mostrarlo en el modal
+    // Función para cargar el archivo Excel desde GitHub y mostrarlo en el panel lateral
     function cargarExcelDesdeGitHub() {
       const url = 'https://raw.githubusercontent.com/INYGEO/reportes/main/PRUEBA.xlsx'; // Reemplaza con la URL correcta
       fetch(url)
@@ -304,66 +220,10 @@
             const sheet = workbook.Sheets[workbook.SheetNames[0]];
             const htmlTable = XLSX.utils.sheet_to_html(sheet);
             document.getElementById('modal-body').innerHTML = htmlTable;
-            document.getElementById('modal').style.display = 'block'; // Mostrar el modal
           };
           reader.readAsArrayBuffer(blob);
         })
         .catch(error => console.error("Error al cargar el archivo Excel:", error));
-    }
-
-    // Función para cerrar el modal
-    document.getElementById('modal-close').onclick = function() {
-      document.getElementById('modal').style.display = 'none';
-    };
-
-    // Función para minimizar el modal
-    document.getElementById('modal-minimize').onclick = function() {
-      document.getElementById('modal-content').style.display = 'none';
-      const minimizedModal = document.createElement('div');
-      minimizedModal.classList.add('minimized');
-      minimizedModal.innerHTML = "Ver tabla";
-      minimizedModal.onclick = function() {
-        document.getElementById('modal-content').style.display = 'block';
-        minimizedModal.style.display = 'none';
-      };
-      document.body.appendChild(minimizedModal);
-    };
-
-    // Función para hacer que el modal sea movible
-    dragElement(document.getElementById('modal-content'));
-
-    function dragElement(elmnt) {
-      let pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
-      if (document.getElementById(elmnt.id + "-header")) {
-        document.getElementById(elmnt.id + "-header").onmousedown = dragMouseDown;
-      } else {
-        elmnt.onmousedown = dragMouseDown;
-      }
-
-      function dragMouseDown(e) {
-        e = e || window.event;
-        e.preventDefault();
-        pos3 = e.clientX;
-        pos4 = e.clientY;
-        document.onmouseup = closeDragElement;
-        document.onmousemove = elementDrag;
-      }
-
-      function elementDrag(e) {
-        e = e || window.event;
-        e.preventDefault();
-        pos1 = pos3 - e.clientX;
-        pos2 = pos4 - e.clientY;
-        pos3 = e.clientX;
-        pos4 = e.clientY;
-        elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
-        elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
-      }
-
-      function closeDragElement() {
-        document.onmouseup = null;
-        document.onmousemove = null;
-      }
     }
   </script>
 </body>
