--- a/index.html
+++ b/index.html
@@ -19,13 +19,27 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      display: flex;
-      flex-direction: row;
     }
-    #map {
-      height: 100%;
-      width: 80%;  /* El mapa ocupa el 80% de la pantalla */
-      position: relative;
+    .ol-control > * {
+      background-color: #f8f8f8!important;
+      color: #444444!important;
+      border-radius: 0px;
+    }
+    .ol-attribution a,
+    .gcd-gl-input::placeholder,
+    .search-layer-input-search::placeholder {
+      color: #444444!important;
+    }
+    .search-layer-input-search {
+      background-color: #f8f8f8!important;
+    }
+    .ol-control > *:focus,
+    .ol-control >*:hover {
+      background-color: rgba(248, 248, 248, 0.7)!important;
+    }
+    .ol-control {
+      background-color: rgba(255,255,255,.4)!important;
+      padding: 2px!important;
     }
     #coordinates {
       position: absolute;
@@ -57,19 +71,8 @@
       padding: 5px 10px;
       margin-left: 10px;
     }
-    /* Panel lateral fijo para la tabla */
     #tabla-container {
-      width: 20%; /* El panel lateral ocupa el 20% de la pantalla */
-      height: 100%;
-      position: fixed;
-      left: 0;
-      top: 0;
-      background-color: #ffffff;
-      overflow-y: auto;
-      padding: 10px;
-      border-right: 2px solid #ccc;
-      box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.1);
-      z-index: 1000;
+      margin-top: 20px;
     }
     table {
       width: 100%;
@@ -82,9 +85,39 @@
       padding: 8px;
       text-align: left;
     }
-    /* Estilos para el panel de tabla */
-    #tabla-container h3 {
-      margin-top: 0;
+    /* Estilos para el Modal */
+    #modal {
+      display: none; /* Oculto por defecto */
+      position: fixed;
+      z-index: 2000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+    }
+    #modal-content {
+      background-color: #fefefe;
+      margin: 10% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+      max-height: 80%;
+      overflow-y: auto;
+      border-radius: 5px;
+    }
+    #modal-close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+    #modal-close:hover,
+    #modal-close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -103,21 +136,22 @@
 
   <div id="coordinates">Coordenadas: -</div>
 
-  <!-- Panel lateral para la tabla -->
-  <div id="tabla-container">
-    <h3>Tabla de Excel</h3>
-    <!-- Aquí se insertará la tabla -->
-    <div id="modal-body">
-      <!-- La tabla se cargará aquí -->
-    </div>
-  </div>
-
-  <!-- Botón para cargar la tabla -->
+  <!-- Botón para cargar la tabla, posicionado en la zona izquierda -->
   <button id="load-table-btn" 
           onclick="cargarExcelDesdeGitHub()" 
-          style="position: absolute; top: 10px; right: 10px; z-index: 1000; background-color: #f8f8f8; padding: 10px 15px; border-radius: 5px; box-shadow: 0px 0px 5px rgba(0,0,0,0.3);">
+          style="position: absolute; top: 100px; left: 50px; z-index: 1000; background-color: #f8f8f8; padding: 10px 15px; border-radius: 5px; box-shadow: 0px 0px 5px rgba(0,0,0,0.3);">
     Cargar Tabla
   </button>
+
+  <!-- Modal para mostrar la tabla -->
+  <div id="modal">
+    <div id="modal-content">
+      <span id="modal-close">&times;</span>
+      <div id="modal-body">
+        <!-- Aquí se insertará la tabla -->
+      </div>
+    </div>
+  </div>
 
   <script src="resources/qgis2web_expressions.js"></script>
   <script src="./resources/functions.js"></script>
@@ -139,11 +173,11 @@
     // Estilo de resaltado para las características del mapa
     var highlightStyle = new ol.style.Style({
       stroke: new ol.style.Stroke({
-        color: 'yellow', // Color del borde resaltado
+        color: 'yellow',
         width: 3
       }),
       fill: new ol.style.Fill({
-        color: 'rgba(255, 255, 0, 0.3)' // Color de relleno semi-transparente
+        color: 'rgba(255, 255, 0, 0.3)'
       })
     });
 
@@ -207,24 +241,59 @@
       }
     }
 
-    // Función para cargar el archivo Excel desde GitHub y mostrarlo en el panel lateral
+    // Función para cargar el archivo Excel desde GitHub y mostrarlo en el modal
     function cargarExcelDesdeGitHub() {
-      const url = 'https://raw.githubusercontent.com/INYGEO/reportes/main/PRUEBA.xlsx'; // Reemplaza con la URL correcta
+      const url = 'https://raw.githubusercontent.com/INYGEO/reportes/main/PRUEBA.xlsx';  // Reemplaza esta URL por la correcta
       fetch(url)
         .then(response => response.blob())
         .then(blob => {
+          console.log("Archivo cargado correctamente");
           const reader = new FileReader();
-          reader.onload = function(event) {
-            const data = new Uint8Array(event.target.result);
-            const workbook = XLSX.read(data, { type: 'array' });
-            const sheet = workbook.Sheets[workbook.SheetNames[0]];
-            const htmlTable = XLSX.utils.sheet_to_html(sheet);
-            document.getElementById('modal-body').innerHTML = htmlTable;
+          reader.onload = function(e) {
+            const data = e.target.result;
+            const wb = XLSX.read(data, { type: 'binary' });
+            const hoja = wb.Sheets[wb.SheetNames[0]];
+            const json = XLSX.utils.sheet_to_json(hoja);
+            console.log("Datos cargados:", json);
+            mostrarTabla(json);
           };
-          reader.readAsArrayBuffer(blob);
+          reader.readAsBinaryString(blob);
         })
-        .catch(error => console.error("Error al cargar el archivo Excel:", error));
+        .catch(error => {
+          console.error('Error al cargar el archivo desde GitHub:', error);
+          alert('Hubo un error al cargar el archivo. Revisa la consola para más detalles.');
+        });
     }
+
+    // Función para mostrar los datos en una tabla HTML dentro del modal
+    function mostrarTabla(data) {
+      let tablaHTML = '<table>';
+      tablaHTML += '<tr><th>CLAVE</th><th>ESTADO</th><th>FECHA DE ULTIMA MODIFICACION</th></tr>';
+      data.forEach(item => {
+        tablaHTML += `<tr>
+                        <td>${item.CLAVE || ''}</td>
+                        <td>${item.ESTADO || ''}</td>
+                        <td>${item['FECHA DE ULTIMA MODIFICACION'] || ''}</td>
+                      </tr>`;
+      });
+      tablaHTML += '</table>';
+      document.getElementById('modal-body').innerHTML = tablaHTML;
+      // Mostrar el modal
+      document.getElementById('modal').style.display = 'block';
+    }
+
+    // Cerrar el modal cuando se haga clic en la "×"
+    document.getElementById('modal-close').onclick = function() {
+      document.getElementById('modal').style.display = 'none';
+    };
+
+    // Cerrar el modal si se hace clic fuera del contenido del modal
+    window.onclick = function(event) {
+      const modal = document.getElementById('modal');
+      if (event.target == modal) {
+        modal.style.display = 'none';
+      }
+    };
   </script>
 </body>
 </html>
